# libnatpmp

./: .gitignore  CMakeLists.txt  Changelog.txt  Makefile  declspec.h  getgateway.c  getgateway.h  libnatpmpmodule.c  natpmp.c  natpmp.h  natpmpc.c  setup.py
msvc/: libnatpmp.vcproj  natpmpc-static.vcproj
